--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -70,14 +70,14 @@
         transition: all 0.2s ease;
         padding: 1rem 1.5rem;
         border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-        text-shadow: 0 0 0 rgba(87, 132, 230, 0);
+        // text-shadow: 0 0 0 rgba(87, 132, 230, 0);
 
         &:hover {
-            color: #7fa7ff;
+            color: var(--color-grey-light);
             // color: var(--color-blue-main);
             text-shadow:
-                0 0 30px rgba(87, 132, 230, 0.5),
-                0 0 50px rgba(87, 132, 230, 0.7);
+                0 0 30px rgba(255, 255, 255, 0.5),
+                0 0 50px rgba(255, 255, 255, 0.7);
         }
 
         &:last-child {
@@ -129,57 +129,24 @@
             width: 100%;
             height: 2px;
             background-color: var(--color-white);
-            transition: .3s;
+            transition: 0.3s;
             position: relative;
             // display: block;
         }
 
         &.active {
             span:nth-child(1) {
-                transform: translateY(12px) rotate(45deg) ;
+                transform: translateY(12px) rotate(45deg);
             }
 
-             span:nth-child(2) {
+            span:nth-child(2) {
                 transform: scale(0);
             }
 
             span:nth-child(3) {
-                transform: translateY(-12px) rotate(-45deg) ;
+                transform: translateY(-12px) rotate(-45deg);
             }
         }
-
-        // &::before,
-        // &::after {
-        //     content: "";
-        //     position: absolute;
-        //     width: 40px;
-        //     height: 2px;
-        //     background-color: var(--color-white);
-        //     transition: all 0.3s ease;
-        // }
-
-        // &::before {
-        //     transform: rotate(0deg);
-        // }
-
-        // &::after {
-        //     transform: rotate(90deg);
-        // }
-
-        // &.active {
-        //     &::before,
-        //     &::after {
-        //         width: 50px;
-        //     }
-
-        //     &::before {
-        //         transform: rotate(45deg);
-        //     }
-
-        //     &::after {
-        //         transform: rotate(135deg);
-        //     }
-        // }
     }
 
     @media (min-width: 767px) {
